force-app/main/default/objects/Detail_Refresher_Setting__mdt/Detail_Refresher_Setting__mdt.object-meta.xml
<CustomObject>
    <description>POC component to Mock the callout for field updates. Instead of an external service this custom metadata is queried instead.</description>
    <label>Detail Refresher Mock</label>
    <pluralLabel>Detail Refresher Mock</pluralLabel>
</CustomObject>