force-app/main/default/objects/Detail_Refresher_Setting__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Field name of the SObject</description>
    <label>Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>