force-app/main/default/objects/Detail_Refresher_Setting__mdt/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>Value of the field to update</description>
    <label>Field Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>