force-app/main/default/objects/Detail_Refresher_Setting__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>